Added Most Activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Amuse</string>
+    <string name="title_activity_museum_finder">MuseumFinder</string>
 </resources>
